--- a/GeoGQuiz/res/layout-land/activity_quiz.xml
+++ b/GeoGQuiz/res/layout-land/activity_quiz.xml
@@ -28,27 +28,12 @@
             android:text="@string/false_button" />
     </LinearLayout>
 
-    <!--
-    <LinearLayout
+    <Button
+        android:id="@+id/cheat_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <ImageButton
-            android:id="@+id/prev_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/prev"
-            android:src="@drawable/arrow_left" />
-
-        <ImageButton
-            android:id="@+id/next_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/next"
-            android:src="@drawable/arrow_right" />
-    </LinearLayout>
-    -->
+        android:layout_gravity="bottom|center"
+        android:text="@string/cheat_button" />
 
     <Button
         android:id="@+id/next_button"
