--- a/GeoGQuiz/res/layout/activity_quiz.xml
+++ b/GeoGQuiz/res/layout/activity_quiz.xml
@@ -28,6 +28,12 @@
             android:text="@string/false_button" />
     </LinearLayout>
 
+    <Button
+        android:id="@+id/cheat_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/cheat_button" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -47,5 +53,11 @@
             android:contentDescription="@string/next"
             android:src="@drawable/arrow_right" />
     </LinearLayout>
+    
+    <TextView
+        android:id="@+id/api_level_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="24dp" />
 
 </LinearLayout>
